...
        }
    }
    
    var body: some View {
        HStack{
            LabelWithCaptionLeading(
                label: "Location",
                caption: caption
            )
            Spacer()
            Button {
                // on click
            } label: {
...
